--- a/about_me.html
+++ b/about_me.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me | Do It 장고 웹사이트</title>
-    <style>
-        nav {background-color: darkgreen; font-size: 150%; text-align: center}
-        nav a {color: gold}
-    </style>
+    <link href="./css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <nav>
