--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Do It 장고 웹사이트</title>
+    <link href="./css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <nav>
