--- a/about_me.html
+++ b/about_me.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me | Do It 장고 웹사이트</title>
     <link href="./css/style.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="./js/what_time_is_it.js"></script>
 </head>
 <body>
     <nav>
@@ -18,6 +19,10 @@
 
     <p>HTML, CSS, JS, DJANGO로 웹사이트 만들기 도전합니다!</p>
     <a href="./index.html">첫 화면 이동</a>
+
+    <button onclick="whatTimeIsIt()">현재 시각</button>
+    <hr/>
+
     <img src="./images/study2.jpg" width="400px">
 </body>
 </html>
