--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Do It 장고 웹사이트</title>
     <link href="./css/style.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="./js/add_two_numbers.js"></script>
+    <script type="text/javascript" src="./js/what_time_is_it.js"></script>
 </head>
 <body>
     <nav>
@@ -17,6 +19,19 @@
     <h3>세 번째 크기 헤드라인</h3>
     <h4>네 번째 크기 헤드라인</h4>
     <h5>다섯 번째 크기 헤드라인</h5>
+
+    <button onclick="whatTimeIsIt()">현재 시각</button>
+    <hr/>
+
+    <label for="inputA">a</label>
+    <input id="inputA" value=1 onkeyup="doSomething()">
+
+    <label for="inputB">b</label>
+    <input id="inputB" value=2 onkeyup="doSomething()">
+
+    <p>
+        <span id="valueA">1</span> + <span id="valueB">2</span> = <span id="valueC">3</span> 입니다.
+    </p>
 
     <p>동해물과 백두산이 마르고 닳도록</p>
     <a href="https://google.com">Go to google</a>
