--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="./css/style.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="./js/add_two_numbers.js"></script>
     <script type="text/javascript" src="./js/what_time_is_it.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <nav>
