--- a/about_me.html
+++ b/about_me.html
@@ -9,8 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg bg-light">
+<div>
+    <div class="navbar navbar-expand-lg bg-light">
+        <div class="container">
         <div class="container-fluid">
           <a class="navbar-brand" href="./index.html">Do It Django</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,17 +41,19 @@
             </ul>
           </div>
         </div>
-      </nav>
+        </div>
+    </nav>
+    <div class="container">
+        <h1>About me</h1>
+        <h2>강원대 곰두리입니다.</h2>
 
-    <h1>About me</h1>
-    <h2>강원대 곰두리입니다.</h2>
+        <p>HTML, CSS, JS, DJANGO로 웹사이트 만들기 도전합니다!</p>
+        <a href="./index.html">첫 화면 이동</a>
 
-    <p>HTML, CSS, JS, DJANGO로 웹사이트 만들기 도전합니다!</p>
-    <a href="./index.html">첫 화면 이동</a>
+        <button onclick="whatTimeIsIt()">현재 시각</button>
+        <hr/>
 
-    <button onclick="whatTimeIsIt()">현재 시각</button>
-    <hr/>
-
-    <img src="./images/study2.jpg" width="400px">
+        <img src="./images/study2.jpg" width="400px">
+    </div>
 </body>
 </html>
