--- a/about_me.html
+++ b/about_me.html
@@ -6,12 +6,12 @@
     <title>About me | Do It 장고 웹사이트</title>
     <link href="./css/style.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="./js/what_time_is_it.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@4.6/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<div>
+<body>
     <div class="navbar navbar-expand-lg bg-light">
-        <div class="container">
+      <div class="container">
         <div class="container-fluid">
           <a class="navbar-brand" href="./index.html">Do It Django</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,10 +41,12 @@
             </ul>
           </div>
         </div>
-        </div>
+      </div>
     </nav>
     <div class="container">
-        <h1>About me</h1>
+      <div class="row">
+        <div class="col-9">
+          <h1>About me</h1>
         <h2>강원대 곰두리입니다.</h2>
 
         <p>HTML, CSS, JS, DJANGO로 웹사이트 만들기 도전합니다!</p>
@@ -52,8 +54,27 @@
 
         <button onclick="whatTimeIsIt()">현재 시각</button>
         <hr/>
-
-        <img src="./images/study2.jpg" width="400px">
+        </div>
+        <div class="col-3">
+          <img src="./images/study2.jpg" class="img-fluid">
+        </div>
+      </div>
     </div>
+    <div class="container">
+      <div class="row">
+        <div clss="col-12">
+          <h2>Portfolio</h2>
+        </div>
+        <div class="col-sm col-lg-6 bg-info">
+          <img src="./images/cat1.jpg" class="img-fluid">
+        </div>
+        <div class="col-sm col-lg-3 bg-secondary">
+          <img src="./images/cat2.jpg" class="img-fluid">
+        </div>
+        <div class="col-sm col-lg-3 bg-warning">
+          <img src="./images/cat3.jpg" class="img-fluid">
+        </div>
+      </div>
+    </div> 
+  </div>
 </body>
-</html>
