--- a/about_me.html
+++ b/about_me.html
@@ -1,80 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About me | Do It 장고 웹사이트</title>
-    <link href="./css/style.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="./js/what_time_is_it.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@4.6/dist/js/bootstrap.bundle.min.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About me | Do It 장고 웹사이트</title>
+  <link href="./css/style.css" rel="stylesheet" type="text/css" />
+  <script type="text/javascript" src="./js/what_time_is_it.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
+
 <body>
-    <div class="navbar navbar-expand-lg bg-light">
-      <div class="container">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html">Do It Django</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" href="./index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./blog_list.html">Blog</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./about_me.html">About me</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown link
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </nav>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light container">
     <div class="container">
-      <div class="row">
-        <div class="col-9">
-          <h1>About me</h1>
+      <a class="navbar-brand" href="./index.html">Do It Django</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./blog_list.html">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./about_me.html">About me</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+              Dropdown link
+            </a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="container">
+    <div class="row">
+      <div class="col-9">
+        <h1>About me</h1>
         <h2>강원대 곰두리입니다.</h2>
 
         <p>HTML, CSS, JS, DJANGO로 웹사이트 만들기 도전합니다!</p>
         <a href="./index.html">첫 화면 이동</a>
 
         <button onclick="whatTimeIsIt()">현재 시각</button>
-        <hr/>
-        </div>
-        <div class="col-3">
-          <img src="./images/study2.jpg" class="img-fluid">
-        </div>
+        <hr />
+      </div>
+      <div class="col-3">
+        <img src="./images/study2.jpg" class="img-fluid" />
       </div>
     </div>
-    <div class="container">
-      <div class="row">
-        <div clss="col-12">
-          <h2>Portfolio</h2>
-        </div>
-        <div class="col-sm col-lg-6 bg-info">
-          <img src="./images/cat1.jpg" class="img-fluid">
-        </div>
-        <div class="col-sm col-lg-3 bg-secondary">
-          <img src="./images/cat2.jpg" class="img-fluid">
-        </div>
-        <div class="col-sm col-lg-3 bg-warning">
-          <img src="./images/cat3.jpg" class="img-fluid">
-        </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div clss="col-12">
+        <h2>Portfolio</h2>
       </div>
-    </div> 
+      <div class="col-sm col-lg-6 bg-info">
+        <img src="./images/cat1.jpg" class="img-fluid" />
+      </div>
+      <div class="col-sm col-lg-3 bg-secondary">
+        <img src="./images/cat2.jpg" class="img-fluid" />
+      </div>
+      <div class="col-sm col-lg-3 bg-warning">
+        <img src="./images/cat3.jpg" class="img-fluid" />
+      </div>
+    </div>
   </div>
 </body>
+
+</html>
