--- a/about_me.html
+++ b/about_me.html
@@ -42,6 +42,11 @@
             </div>
           </li>
         </ul>
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Log In</a>
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
@@ -63,7 +68,7 @@
     </div>
   </div>
   <div class="container">
-    <div class="row">
+    <div class="row my-3">
       <div clss="col-12">
         <h2>Portfolio</h2>
       </div>
