--- a/blog_list.html
+++ b/blog_list.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <title>Blog | Do It 장고 웹사이트</title>
-    <!-- <link href="./css/style.css" rel="stylesheet" type="text/css"> -->
+    <script src="https://kit.fontawesome.com/c85c5556f3.js"></script>
+    <!-- <link href=" ./css/style.css" rel="stylesheet" type="text/css"> -->
 </head>
 
 <body>
@@ -42,12 +43,45 @@
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Log In</a>
+                        <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal">Log In</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+    <!-- Modal -->
+    <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="logainModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="loginModal"><i class="fa-solid fa-right-to-bracket"></i> Log In</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-6 col-sm-12">
+                            <button type="button" class="btn btn-outline-dark btn-block btn-sm"><i
+                                    class="fa-brands fa-google"></i> Log in with
+                                Google</button>
+                            <button type="button" class="btn btn-outline-dark btn-block btn-sm"><i
+                                    class="fa-regular fa-user"></i> Log in with
+                                Username</button>
+                        </div>
+                        <div class="col-md-6 col-sm-12">
+                            <button type="button" class="btn btn-outline-dark btn-block btn-sm"><i
+                                    class="fa-regular fa-envelope"></i> Sign up with
+                                E-mail</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="container">
         <div class="row my-3">
             <div class="col-md-8 col-lg-9">
